--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Simple Website</title>
 </head>
 <body>
-    <h1>Welcome to My Simple Website!</h1>
-    <p>This website is running on Node.js and Express.</p>
+    <h1>Welcome to EPE PiggyBank Website</h1>
+    <p>This website is under Maintainence...</p>
 </body>
 </html>
